<resources>
    <string name="app_name">ATM Demo</string>
    <string name="total_price">Total Available Price :</string>
    <string name="_10000">10000</string>
    <string name="_2000">2000:</string>
    <string name="_500">500:</string>
    <string name="_100">100:</string>
    <string name="_4000">4000</string>
    <string name="debit">Debit</string>
    <string name="please_enter_amount">Please Enter Amount</string>
    <string name="_1000">1000</string>
</resources>