<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/totalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/_10000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/totalTxt"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/twoTho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/_2000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalTxt" />

    <TextView
        android:id="@+id/twoThoAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/_4000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/twoTho"
        app:layout_constraintTop_toBottomOf="@id/totalAmount" />


    <TextView
        android:id="@+id/fiveHund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/_500"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/twoThoAmount"
        app:layout_constraintStart_toEndOf="@id/twoThoAmount"
        app:layout_constraintTop_toBottomOf="@id/totalTxt"
        app:layout_goneMarginStart="8dp" />

    <TextView
        android:id="@+id/fiveHundAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="2000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/fiveHund"
        app:layout_constraintTop_toBottomOf="@id/totalAmount" />


    <TextView
        android:id="@+id/oneHund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/_100"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fiveHundAmount"
        app:layout_constraintStart_toEndOf="@id/fiveHundAmount"
        app:layout_constraintTop_toBottomOf="@id/totalTxt"
        app:layout_goneMarginStart="8dp" />

    <TextView
        android:id="@+id/oneHundAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/_4000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/oneHund"
        app:layout_constraintTop_toBottomOf="@id/totalAmount" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/amountTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="164dp"
        android:hint="@string/please_enter_amount"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/twoTho" />

    <Button
        android:id="@+id/debitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/debit"
        app:layout_constraintEnd_toEndOf="@id/amountTxt"
        app:layout_constraintStart_toStartOf="@id/amountTxt"
        app:layout_constraintTop_toBottomOf="@id/amountTxt" />


    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/debitBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>